[package]
name = "link_router"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.40", features = ["derive"] }
log = "0.4.27"
open = "5.3.2"
regex = "1.11.1"
serde = {version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
simple_logger = "5.0.0"
url = "2.5.4"
urlencoding = "2.1.3"
